[package]
name = "giza-wasm"
version = "0.1.0"
edition = "2021"
rust-version = "1.64"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.74"
js-sys = "0.3.57"
air = { package = "giza-air", git = "https://github.com/maxgillett/giza", version = "0.1", default-features = false }
giza_core = { package = "giza-core", git = "https://github.com/maxgillett/giza", version = "0.1", default-features = false }
winterfell = { package = "winter-verifier", git = "https://github.com/maxgillett/winterfell", rev = "0aad6a5", version = "0.4", default-features = false }
winter-math = { package = "winter-math", git = "https://github.com/maxgillett/winterfell", rev = "0aad6a5", version = "0.4", default-features = false }
winter-crypto = { package = "winter-crypto", git = "https://github.com/maxgillett/winterfell", rev = "0aad6a5", version = "0.4", default-features = false }
bincode = "1.3.3"
serde = { version = "1.0.136", features = ["derive"] }
serde-wasm-bindgen = "0.4"
hex = "0.4.3"
sha3 = { version = "0.10", default-features = false }



[profile.release]
lto = true
opt-level = 's'

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
